Fix links in Materias

--- a/Materias/materia2.html
+++ b/Materias/materia2.html
@@ -86,14 +86,14 @@
         <section id="Materias">
             <div id="ComAside">
                 <article>
-                    <a href="Materias/materia3.html" class="bloco T4">
+                    <a href="materia3.html" class="bloco T4">
                         <div class="imgMateria" id="M3" class="investimentosT"></div>
                         <p class="temaM">Investimentos</p>
                         <h4>Tipos de investimentos</h4>
                         <p>Investimentos financeiros são aqueles onde você aplica o seu dinheiro visando um alto retorno
                             no futuro.</p>
                     </a>
-                    <a href="Materias/materia1.html" class="bloco T2">
+                    <a href="materia1.html" class="bloco T2">
                         <div class="imgMateria" id="M1" class="educFinanceiraT"></div>
                         <p class="temaM">Educação financeira</p>
                         <h4>O que é educação financeira?</h4>
@@ -111,7 +111,7 @@
                             (adsbygoogle = window.adsbygoogle || []).push({});
                         </script>
                     </aside>
-                    <a href="Materias/materia4.html" class="bloco T4">
+                    <a href="materia4.html" class="bloco T4">
                         <div class="imgMateria" id="M4" class="investimentosT"></div>
                         <p class="temaM">Investimentos</p>
                         <h4>Poupança</h4>
