--- a/Materias/materia3.html
+++ b/Materias/materia3.html
@@ -73,14 +73,14 @@
         <section id="Materias">
             <div id="ComAside">
                 <article>
-                    <a href="Materias/materia4.html" class="bloco T4">
+                    <a href="materia4.html" class="bloco T4">
                         <div class="imgMateria" id="M4" class="investimentosT"></div>
                         <p class="temaM">Investimentos</p>
                         <h4>Poupança</h4>
                         <p>Poupar é uma forma tradicional de investir e não envolve riscos. A finalidade da poupança é
                             guardar recursos fixos para usar em um determinado fim.</p>
                     </a>
-                    <a href="Materias/materia7.html" class="bloco T1">
+                    <a href="materia7.html" class="bloco T1">
                         <div class="imgMateria" id="M7" class="economiaT"></div>
                         <p class="temaM">Economia</p>
                         <h4>Juros e inflação</h4>
@@ -98,7 +98,7 @@
                             (adsbygoogle = window.adsbygoogle || []).push({});
                         </script>
                     </aside>
-                    <a href="Materias/materia2.html" class="bloco T4">
+                    <a href="materia2.html" class="bloco T4">
                         <div class="imgMateria" id="M2" class="investimentosT"></div>
                         <p class="temaM">Investimentos</p>
                         <h4>O que é investimentos?</h4>
