--- a/Materias/materia4.html
+++ b/Materias/materia4.html
@@ -67,14 +67,14 @@
         <section id="Materias">
             <div id="ComAside">
                 <article>
-                    <a href="Materias/materia3.html" class="bloco T4">
+                    <a href="materia3.html" class="bloco T4">
                         <div class="imgMateria" id="M3" class="investimentosT"></div>
                         <p class="temaM">Investimentos</p>
                         <h4>Tipos de investimentos</h4>
                         <p>Investimentos financeiros são aqueles onde você aplica o seu dinheiro visando um alto retorno
                             no futuro.</p>
                     </a>
-                    <a href="Materias/materia5.html" class="bloco T1">
+                    <a href="materia5.html" class="bloco T1">
                         <div class="imgMateria" id="M5" class="economiaT"></div>
                         <p class="temaM">Economia</p>
                         <h4>O que é liquidez?</h4>
@@ -92,7 +92,7 @@
                             (adsbygoogle = window.adsbygoogle || []).push({});
                         </script>
                     </aside>
-                    <a href="Materias/materia2.html" class="bloco T4">
+                    <a href="materia2.html" class="bloco T4">
                         <div class="imgMateria" id="M2" class="investimentosT"></div>
                         <p class="temaM">Investimentos</p>
                         <h4>O que é investimentos?</h4>
