--- a/Materias/materia7.html
+++ b/Materias/materia7.html
@@ -72,14 +72,14 @@
         <section id="Materias">
             <div id="ComAside">
                 <article>
-                    <a href="Materias/materia6.html" class="bloco T1">
+                    <a href="materia6.html" class="bloco T1">
                         <div class="imgMateria" id="M6" class="economiaT"></div>
                         <p class="temaM">Economia</p>
                         <h4>Bolsa de Valores</h4>
                         <p>A bolsa de valores é um ambiente digital onde ocorrem a negociação de ações, títulos e outros
                             ativos. </p>
                     </a>
-                    <a href="Materias/materia3.html" class="bloco T4">
+                    <a href="materia3.html" class="bloco T4">
                         <div class="imgMateria" id="M3" class="investimentosT"></div>
                         <p class="temaM">Investimentos</p>
                         <h4>Tipos de investimentos</h4>
@@ -97,7 +97,7 @@
                             (adsbygoogle = window.adsbygoogle || []).push({});
                         </script>
                     </aside>
-                    <a href="Materias/materia7.html" class="bloco T1">
+                    <a href="materia7.html" class="bloco T1">
                         <div class="imgMateria" id="M7" class="economiaT"></div>
                         <p class="temaM">Economia</p>
                         <h4>Juros e inflação</h4>
