--- a/Materias/materia9.html
+++ b/Materias/materia9.html
@@ -64,14 +64,14 @@
         <section id="Materias">
             <div id="ComAside">
                 <article>
-                    <a href="Materias/materia8.html" class="bloco T3">
+                    <a href="materia8.html" class="bloco T3">
                         <div class="imgMateria" id="M8" class="endividamentoT"></div>
                         <p class="temaM">Endividamento</p>
                         <h4>Crédito</h4>
                         <p>Crédito é uma forma de compra rápida oferecida por bancos centrais que não precisa
                             necessariamente do dinheiro na hora.</p>
                     </a>
-                    <a href="Materias/materia1.html" class="bloco T2">
+                    <a href="materia1.html" class="bloco T2">
                         <div class="imgMateria" id="M1" class="educFinanceiraT"></div>
                         <p class="temaM">Educação financeira</p>
                         <h4>O que é educação financeira?</h4>
@@ -89,7 +89,7 @@
                             (adsbygoogle = window.adsbygoogle || []).push({});
                         </script>
                     </aside>
-                    <a href="Materias/materia5.html" class="bloco T1">
+                    <a href="materia5.html" class="bloco T1">
                         <div class="imgMateria" id="M5" class="economiaT"></div>
                         <p class="temaM">Economia</p>
                         <h4>O que é liquidez?</h4>
