--- a/Materias/materia5.html
+++ b/Materias/materia5.html
@@ -70,14 +70,14 @@
         <section id="Materias">
             <div id="ComAside">
                 <article>
-                    <a href="Materias/materia6.html" class="bloco T1">
+                    <a href="materia6.html" class="bloco T1">
                         <div class="imgMateria" id="M6" class="economiaT"></div>
                         <p class="temaM">Economia</p>
                         <h4>Bolsa de Valores</h4>
                         <p>A bolsa de valores é um ambiente digital onde ocorrem a negociação de ações, títulos e outros
                             ativos. </p>
                     </a>
-                    <a href="Materias/materia2.html" class="bloco T4">
+                    <a href="materia2.html" class="bloco T4">
                         <div class="imgMateria" id="M2" class="investimentosT"></div>
                         <p class="temaM">Investimentos</p>
                         <h4>O que é investimentos?</h4>
@@ -95,7 +95,7 @@
                             (adsbygoogle = window.adsbygoogle || []).push({});
                         </script>
                     </aside>
-                    <a href="Materias/materia7.html" class="bloco T1">
+                    <a href="materia7.html" class="bloco T1">
                         <div class="imgMateria" id="M7" class="economiaT"></div>
                         <p class="temaM">Economia</p>
                         <h4>Juros e inflação</h4>
