--- a/Materias/materia6.html
+++ b/Materias/materia6.html
@@ -76,14 +76,14 @@
         <section id="Materias">
             <div id="ComAside">
                 <article>
-                    <a href="Materias/materia5.html" class="bloco T1">
+                    <a href="materia5.html" class="bloco T1">
                         <div class="imgMateria" id="M5" class="economiaT"></div>
                         <p class="temaM">Economia</p>
                         <h4>O que é liquidez?</h4>
                         <p>A liquidez é a capacidade que um bem ou investimento tem de ser transformado em dinheiro em
                             mãos</p>
                     </a>
-                    <a href="Materias/materia1.html" class="bloco T2">
+                    <a href="materia1.html" class="bloco T2">
                         <div class="imgMateria" id="M1" class="educFinanceiraT"></div>
                         <p class="temaM">Educação financeira</p>
                         <h4>O que é educação financeira?</h4>
@@ -101,7 +101,7 @@
                             (adsbygoogle = window.adsbygoogle || []).push({});
                         </script>
                     </aside>
-                    <a href="Materias/materia7.html" class="bloco T1">
+                    <a href="materia7.html" class="bloco T1">
                         <div class="imgMateria" id="M7" class="economiaT"></div>
                         <p class="temaM">Economia</p>
                         <h4>Juros e inflação</h4>
