--- a/Materias/materia8.html
+++ b/Materias/materia8.html
@@ -77,14 +77,14 @@
         <section id="Materias">
             <div id="ComAside">
                 <article>
-                    <a href="Materias/materia9.html" class="bloco T3">
+                    <a href="materia9.html" class="bloco T3">
                         <div class="imgMateria" id="M9" class="endividamentoT"></div>
                         <p class="temaM">Endividamento</p>
                         <h4>Endividamento</h4>
                         <p>O endividamento acontece quando você não consegue arcar com os gastos e acaba adiando o
                             pagamento. </p>
                     </a>
-                    <a href="Materias/materia4.html" class="bloco T4">
+                    <a href="materia4.html" class="bloco T4">
                         <div class="imgMateria" id="M4" class="investimentosT"></div>
                         <p class="temaM">Investimentos</p>
                         <h4>Poupança</h4>
@@ -102,7 +102,7 @@
                             (adsbygoogle = window.adsbygoogle || []).push({});
                         </script>
                     </aside>
-                    <a href="Materias/materia7.html" class="bloco T1">
+                    <a href="materia7.html" class="bloco T1">
                         <div class="imgMateria" id="M7" class="economiaT"></div>
                         <p class="temaM">Economia</p>
                         <h4>Juros e inflação</h4>
